alterando o produto 4 para nao black friday

--- a/index.htm
+++ b/index.htm
@@ -103,7 +103,7 @@
                         <td>Produto 4</td>
                         <td>5</td>
                         <td>R$6</td>
-                        <td>Sim </td>
+                        <td>nao </td>
                     </tr>
                 </tbody>
                 <tfoot>
